fix: allow note label to wrap by overriding PCUI label defaults
Made-with: Cursor

--- a/sass/editor/_editor-main.scss
+++ b/sass/editor/_editor-main.scss
@@ -4762,6 +4762,8 @@ strong {
                         &.note {
                             font-size: 13px;
                             line-height: 1.4;
+                            white-space: normal;
+                            overflow: visible;
                             color: $text-secondary;
                         }
                     }
